# trading-engine

./: .env.example  .gitignore  CHANGELOG.md  CodeReview#1.md  CodeReview#2-re.md  CodeReview#2.md  LICENSE  README.md  SPEC.md  pyproject.toml  run_tests.py
.github/workflows/: tests.yml
docs/: BACKTEST_HOST_CONTRACT.md  DESIGN.md  LIVE_SAFETY.md  MIGRATION_FROM_THEMAN.md  STRATEGY.md  UAT_CHECKLIST.md
docs/releases/: v0.2.0.md
examples/minimal_live/: README.md  bootstrap_stub.py
src/trading_engine/: __init__.py  _version.py  engine.py  exchange_time.py  indicators.py  logging_setup.py  order_errors.py  order_executor.py  plugins.py  py.typed  session.py  settings.py
src/trading_engine/adapters/: __init__.py  base.py  mock.py  position_normalizer.py  shioaji.py  shioaji_live.py
src/trading_engine/calendar/: __init__.py  port.py  taifex.py
src/trading_engine/core/: __init__.py  order_events.py  ports.py  runtime_config.py  side_effect_ports.py  strategy.py  trading_state.py  types.py
src/trading_engine/core/audit/: __init__.py  signal_audit.py
src/trading_engine/testing/: __init__.py  defaults.py  helpers.py
tests/: test_exchange_time.py  test_no_shioaji_core_import.py  test_volume_threshold.py
tests/core/: test_strategy_injection.py
tests/runtime/: test_adversarial_callbacks.py  test_atr_stale_and_reconnect_guards.py  test_deal_state_machine.py  test_kernel_force_flatten.py  test_live_guards.py  test_position_qty.py  test_qty_mismatch_guard.py  test_reconnect_race.py  test_session_flatten.py  test_signal_validation.py  test_state_snapshot.py  test_sync_positions.py
