[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-engine"
version = "0.1.0"
description = "Broker-agnostic futures trading execution host"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
shioaji = ["shioaji"]

[tool.setuptools.packages.find]
where = ["src"]